# sfml-cmake-test

./: CMakeLists.txt  README.markdown  main.cpp
cmake/: FindSFML.cmake
